update claude.md